ingress-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: {}
  namespace: {}
spec:
  ingressClassName: frp
  rules:
  - host: '{}.platform.bupt.site'
    http:
      paths:
      - backend:
          service:
            name: {}
            port:
              number: {}
        path: /
        pathType: Prefix
